--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@dasch-swiss/dsp-ui": "^1.0.0-rc.2",
     "@types/openseadragon": "^2.4.5",
     "jdnconvertiblecalendar": "0.0.5",
-    "jdnconvertiblecalendardateadapter": "0.0.14",
+    "jdnconvertiblecalendardateadapter": "0.0.13",
     "ngx-color-picker": "^10.1.0",
     "openseadragon": "^2.4.2",
     "rxjs": "~6.5.4",
+    "svg-overlay": "github:openseadragon/svg-overlay",
     "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
